--- a/brainapp/app/src/main/res/values/styles.xml
+++ b/brainapp/app/src/main/res/values/styles.xml
@@ -6,8 +6,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="PreferencesTheme" parent="android:Theme.Holo">
-    </style>
+    <style name="PreferencesTheme" parent="android:Theme.Holo"></style>
 
     <style name="Widget.MyApp.Toolbar.Solid" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/umBlue</item>
@@ -17,5 +16,9 @@
         <!-- Parent theme sets colorControlNormal to textColorPrimary. -->
         <item name="android:textColorPrimary">@color/umMaize</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
