--- a/brainapp/app/src/main/res/layout/main.xml
+++ b/brainapp/app/src/main/res/layout/main.xml
@@ -1,67 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".CameraActivity" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@mipmap/april_lab"
-            android:paddingLeft="10dp"
-            android:theme="@style/Widget.MyApp.Toolbar.Solid"/>
-        <android.support.v7.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.MyApp.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
-            style="@style/Widget.MyApp.Toolbar.Solid"
-            android:elevation="4dp"/>
-    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/preview_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
+    <!-- Where is the CameraPreview object? It's added dynamically
+         from the code (see MainActivity's onCreate() method) only
+         when the camera is enabled -->
 
-
-<!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#00274c">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:src="@mipmap/april_lab"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:paddingLeft="10dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:text="@string/app_name_banner"
-                android:gravity="center"
-                />
-            <ImageView
-                android:src="@mipmap/apriltag"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
-                android:paddingRight="10dp"
-                />
-        </RelativeLayout>
-    </LinearLayout>
--->
-    <FrameLayout
-        android:id="@+id/tag_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+</FrameLayout>
